--- a/package.json
+++ b/package.json
@@ -3,23 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS=--openssl-legacy-provider next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "glob-parent": "^5.1.2",
-    "next": "^11.0.0",
-    "next-seo": "^4.24.0",
-    "next-themes": "^0.0.14",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next": "^15.0.3",
+    "next-seo": "^6.6.0",
+    "next-themes": "^0.4.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/node": "^22.10.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.0.4",
     "eslint": "^7.28.0",
-    "eslint-config-next": "^11.0.0",
+    "eslint-config-next": "^15.0.3",
     "postcss": "^8.1.10",
-    "tailwindcss": "^2.1.1"
+    "tailwindcss": "^2.1.1",
+    "typescript": "^5.7.2"
   }
 }
