--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "glob-parent": "^5.1.2",
+    "mongodb": "^6.11.0",
     "next": "^15.0.3",
     "next-seo": "^6.6.0",
     "next-themes": "^0.4.3",
