--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
     "glob-parent": "^5.1.2",
+    "history": "^5.3.0",
     "leaflet": "^1.9.4",
     "mongodb": "^6.11.0",
-    "next": "^15.0.3",
+    "next": "^15.1.0",
     "next-seo": "^6.6.0",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@types/node": "^22.10.0",
