--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "connect-mongodb-session": "^5.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "express": "^4.21.2",
     "glob-parent": "^5.1.2",
     "history": "^5.3.0",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "mongodb": "^6.11.0",
+    "mongoose": "^8.8.4",
     "next": "^15.1.0",
     "next-seo": "^6.6.0",
     "next-themes": "^0.4.3",
