--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "glob-parent": "^5.1.2",
     "history": "^5.3.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "mongodb": "^6.11.0",
@@ -30,6 +31,7 @@
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.10.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
