--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "connect-mongodb-session": "^5.0.0",
     "cors": "^2.8.5",
@@ -18,6 +19,7 @@
     "express": "^4.21.2",
     "glob-parent": "^5.1.2",
     "history": "^5.3.0",
+    "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
@@ -26,9 +28,11 @@
     "next": "^15.1.0",
     "next-seo": "^6.6.0",
     "next-themes": "^0.4.3",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
